--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tape": "^4.6.3"
   },
   "dependencies": {
-    "async": "^2.1.4",
+    "agraddy.async.each": "^0.4.0",
     "safe-regex": "^1.1.0"
   }
 }
